@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>com.b2international.snowowl</groupId>
 		<artifactId>core-parent</artifactId>
-		<version>6.12.0-SNAPSHOT</version>
+		<version>6.19.0-SNAPSHOT</version>
 	</parent>
 
 	<build>
@@ -23,22 +23,17 @@
 							<requirement>
 								<type>eclipse-plugin</type>
 								<id>org.eclipse.jetty.osgi.boot</id>
-								<versionRange>[8.1.0,8.2.0)</versionRange>
+								<versionRange>0.0.0</versionRange>
 							</requirement>
 							<requirement>
 								<type>eclipse-plugin</type>
 								<id>ch.qos.logback.classic</id>
-								<versionRange>[1.0.7,1.0.8)</versionRange>
+								<versionRange>${logback.versionRange}</versionRange>
 							</requirement>
 							<requirement>
 								<type>eclipse-plugin</type>
 								<id>ch.qos.logback.core</id>
-								<versionRange>[1.0.7,1.0.8)</versionRange>
-							</requirement>
-							<requirement>
-								<type>eclipse-plugin</type>
-								<id>ch.qos.logback.slf4j</id>
-								<versionRange>[1.0.7,1.0.8)</versionRange>
+								<versionRange>${logback.versionRange}</versionRange>
 							</requirement>
 							<requirement>
 								<type>eclipse-plugin</type>
@@ -69,14 +64,7 @@
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<configuration>
 					<useUIThread>false</useUIThread>
-					<argLine>-XX:MaxPermSize=256m -Xms512m -Xmx2g -XX:+AlwaysLockClassLoader -Dosgi.classloader.type=nonparallel -Djetty.home.bundle=org.eclipse.jetty.osgi.boot -Djetty.port=9090</argLine>
-					<bundleStartLevel>
-						<bundle>
-							<id>org.eclipse.jetty.osgi.boot</id>
-							<level>3</level>
-							<autoStart>true</autoStart>
-						</bundle>
-					</bundleStartLevel>
+					<argLine>-Xms1g -Xmx1g -XX:+AlwaysLockClassLoader -Dosgi.classloader.type=nonparallel -Djetty.home.bundle=org.eclipse.jetty.osgi.boot -Djetty.port=9090</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
